--- a/package.json
+++ b/package.json
@@ -9,19 +9,11 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
-  "files": [
-    "dist/**/*"
-  ],
-  "main": "dist/index.cjs.js",
-  "module": "dist/index.esm.js",
-  "types": "dist/index.d.ts",
-  "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
-  },
   "peerDependencies": {
     "bootstrap": "^5.3.3",
+    "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
+    "react-dom": "^18.3.1",
     "react-slick": "^0.30.2",
     "react-spinners": "^0.14.1",
     "slick-carousel": "^1.8.1"
