Library structure correct

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,16 +30,9 @@
     "noUncheckedIndexedAccess": true,
     "noImplicitAny": false,
 
-    // The types defined in "vite/client" are included in global scope.
-    "types": ["vite/client"],
-
     "sourceMap": false,
     "declaration": true,
-    "declarationMap": false,
-
-    "paths": {
-      "tahoni-lib/*": ["./lib/*"]
-    }
+    "declarationMap": false
   },
   "include": ["lib"]
 }
