--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prepublishOnly": "npm run build"
   },
+  "main": "dist/main.js",
+  "types": "dist/main.d.ts",
+  "files": ["dist"],
+  "sideEffects": ["**/*.css"],
   "peerDependencies": {
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
