--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   },
   "main": "dist/main.js",
   "types": "dist/main.d.ts",
-  "files": ["dist"],
-  "sideEffects": ["**/*.css"],
+  "files": [
+    "dist"
+  ],
+  "sideEffects": [
+    "**/*.css"
+  ],
   "peerDependencies": {
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
@@ -39,7 +43,6 @@
     "typescript": "^5.2.2",
     "vite": "^5.3.1",
     "vite-plugin-dts": "^3.9.1",
-    "vite-plugin-lib-inject-css": "^2.1.1",
-    "vite-tsconfig-paths": "^4.3.2"
+    "vite-plugin-lib-inject-css": "^2.1.1"
   }
 }
