--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "tahoni-lib-react",
-  "private": true,
+  "name": "@tahoni/tahoni-lib-react",
+  "author": "Leoni Lubbinge <tahoni@gmail.com>",
   "version": "1.0.0",
   "type": "module",
   "scripts": {
@@ -10,8 +10,8 @@
     "preview": "vite preview",
     "prepublishOnly": "npm run build"
   },
-  "main": "dist/main.js",
-  "types": "dist/main.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "files": [
     "dist"
   ],
