Display correct override values Change styles to correctly display override values for the carousel dots and arrows Add src to the tsconfig file Remove src from the vite.config file

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,15 +22,10 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "noImplicitOverride": true,
-    "noImplicitReturns": true,
-    "noImplicitThis": true,
-    "noUncheckedIndexedAccess": true,
-    "noImplicitAny": false,
 
     "sourceMap": false,
     "declaration": true,
     "declarationMap": false
   },
-  "include": ["lib"]
+  "include": ["lib","src"]
 }
