--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
-    "noUnusedParameters": true,
+//    "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
 
     "sourceMap": false,
