--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
     "**/*.css"
   ],
   "peerDependencies": {
-    "bootstrap": "~5.3.0",
-    "react": "~18.3.0",
-    "react-bootstrap": "~2.10.0",
-    "react-dom": "~18.3.0",
-    "react-slick": "~0.30.0",
-    "react-spinners": "~0.14.0",
-    "slick-carousel": "~1.8.0"
+    "bootstrap": "^5.3.0",
+    "react": "^18.3.0",
+    "react-bootstrap": "^2.10.0",
+    "react-dom": "^18.3.0",
+    "react-slick": "^0.30.0",
+    "react-spinners": "^0.14.0",
+    "slick-carousel": "^1.8.0"
   },
   "devDependencies": {
     "@types/node": "^20.14.10",
