--- a/package.json
+++ b/package.json
@@ -2,19 +2,18 @@
   "name": "@tahoni/tahoni-lib-react",
   "author": "Leoni Lubbinge <tahoni@gmail.com>",
   "description": "React component library",
-  "version": "2.0.1",
+  "version": "2.0.21",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite build && vite",
     "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "prepublishOnly": "npm run build",
-    "publish": "npm run publish"
+    "prepublishOnly": "npm run build"
   },
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "files": [
-    "dist"
+    "./dist"
   ],
   "sideEffects": [
     "**/*.css"
