--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@tahoni/tahoni-lib-react",
   "author": "Leoni Lubbinge <tahoni@gmail.com>",
   "description": "React component library",
-  "version": "2.0.21",
+  "version": "2.0.42",
   "type": "module",
   "scripts": {
     "dev": "vite build && vite",
@@ -19,13 +19,8 @@
     "**/*.css"
   ],
   "peerDependencies": {
-    "bootstrap": "^5.3.3",
     "react": "^18.3.1",
-    "react-bootstrap": "^2.10.4",
-    "react-dom": "^18.3.1",
-    "react-slick": "^0.30.2",
-    "react-spinners": "^0.14.1",
-    "slick-carousel": "^1.8.1"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/node": "^20.14.10",
@@ -35,11 +30,16 @@
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
     "@vitejs/plugin-react": "^4.3.1",
+    "bootstrap": "^5.3.3",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "glob": "^11.0.0",
+    "react-bootstrap": "^2.10.4",
+    "react-slick": "^0.30.2",
+    "react-spinners": "^0.14.1",
     "sass": "^1.77.8",
+    "slick-carousel": "^1.8.1",
     "typescript": "^5.2.2",
     "vite": "^5.3.1",
     "vite-plugin-dts": "^3.9.1",
