Rename the CSS variables to align them with the component name Rename the CSS variables to align them with the component name Give the cover component a type Always return a value in the cover slider component Add more linting rules Rename the example slider directory Increase the version number

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,14 @@
 
     /* Linting */
     "strict": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
+    "noImplicitOverride": true,
+    "noImplicitReturns": true,
+    "noImplicitThis": true,
+    "noUncheckedIndexedAccess": true,
+    "noImplicitAny": true,
 
     "sourceMap": false,
     "declaration": true,
