--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "@tahoni/tahoni-lib-react",
   "author": "Leoni Lubbinge <tahoni@gmail.com>",
   "description": "React component library",
-  "version": "2.1.0",
+  "version": "2.1.3",
   "type": "module",
   "scripts": {
-    "dev": "vite build && vite",
+    "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "prepublishOnly": "npm run build"
