--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "glob": "^11.0.0",
     "react-bootstrap": "^2.10.4",
+    "react-router": "^6.25.1",
+    "react-router-dom": "^6.25.1",
     "react-slick": "^0.30.2",
     "react-spinners": "^0.14.1",
     "sass": "^1.77.8",
