--- a/package.json
+++ b/package.json
@@ -18,31 +18,37 @@
   "sideEffects": [
     "**/*.css"
   ],
-  "peerDependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+  "dependencies": {
+    "prettier": "^3.4.2",
+    "react": "~19.0.0",
+    "react-dom": "~19.0.0",
+    "react-spinners": "^0.15.0"
   },
   "devDependencies": {
-    "@types/node": "^20.14.10",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
+    "@eslint/js": "^9.17.0",
+    "@types/react": "19.0.3",
+    "@types/react-dom": "19.0.2",
     "@types/react-slick": "^0.23.13",
-    "@typescript-eslint/eslint-plugin": "^7.13.1",
-    "@typescript-eslint/parser": "^7.13.1",
-    "@vitejs/plugin-react": "^4.3.1",
+    "@vitejs/plugin-react": "^4.3.4",
+    "eslint": "^9.17.0",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.16",
+    "globals": "^15.14.0",
+    "sass": "^1.83.1",
+    "typescript": "~5.6.2",
+    "typescript-eslint": "^8.18.2",
+    "vite": "^6.0.5",
+    "vite-plugin-dts": "^4.5.0",
+    "vite-plugin-lib-inject-css": "^2.2.1",
+    "vitest": "^2.1.8"
+  },
+  "peerDependencies": {
     "bootstrap": "^5.3.3",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.7",
-    "glob": "^11.0.0",
-    "react-bootstrap": "^2.10.4",
-    "react-slick": "^0.30.2",
-    "react-spinners": "^0.14.1",
-    "sass": "^1.77.8",
+    "eslint-plugin-react": "^7.37.3",
+    "glob": "^11.0.1",
+    "react-bootstrap": "^2.10.7",
+    "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
-    "typescript": "^5.2.2",
-    "vite": "^5.4.6",
-    "vite-plugin-dts": "^4.0.1",
-    "vite-plugin-lib-inject-css": "^2.1.1"
+    "yet-another-react-lightbox": "^3.21.7"
   }
 }
