--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@tahoni/tahoni-lib-react",
+  "name": "tahoni-lib-react",
   "author": "Leoni Lubbinge <tahoni@gmail.com>",
   "description": "React component library",
-  "version": "3.0.5",
+  "version": "3.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -19,7 +19,6 @@
     "**/*.css"
   ],
   "dependencies": {
-    "prettier": "^3.4.2",
     "react": "~19.0.0",
     "react-dom": "~19.0.0",
     "react-spinners": "^0.15.0"
@@ -34,6 +33,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
+    "prettier": "^3.4.2",
     "sass": "^1.83.1",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
