Improved the model classes. Inherit the image class from the object class. Rename the models directory,

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -13,11 +13,11 @@ name: "CodeQL Advanced"
 
 on:
   push:
-    branches: [ "main", "*", "develop", "release/*" ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ "main", "*", "develop", "release/*" ]
+    branches: [ "main" ]
   schedule:
-    - cron: '27 1 * * 3'
+    - cron: '26 18 * * 4'
 
 jobs:
   analyze:
