--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint",
     "prepublishOnly": "npm run build"
   },
   "main": "./dist/index.js",
@@ -40,7 +40,7 @@
     "vite": "^6.1.0",
     "vite-plugin-dts": "^4.5.0",
     "vite-plugin-lib-inject-css": "^2.2.1",
-    "vitest": "^2.1.9"
+    "vitest": "^3.0.5"
   },
   "peerDependencies": {
     "bootstrap": "^5.3.3",
