--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "**/*.css"
   ],
   "dependencies": {
+    "@types/node": "^22.13.4",
     "react": "~19.0.0",
     "react-dom": "~19.0.0"
   },
